# semantic-id.rs

./: Cargo.toml
projects/candle-srcnn/: Cargo.toml
projects/candle-srcnn/src/: lib.rs
projects/candle-srcnn/src/modules/: mod.rs
projects/semantic-id/: Cargo.toml  readme.md
projects/semantic-id/src/state16/: mod.rs
