[package]
name = "semantic-id"
version = "0.0.0"
authors = []
license = "MIT"
description = "The identifier with semantic postfix"
homepage = "https://github.com/oovm/semantic-id.rs/tree/master/projects/semantic-id"
documentation = "https://docs.rs/semantic-id"
repository = "https://github.com/oovm/semantic-id.rs"
edition = "2024"

[dependencies]
serde = { version = "1.0.217", optional = true }
poem-openapi = { version = "5.1.5", optional = true }
rand = { version = "0.9.0" }
uuid = { version = "1.13.2", optional = true, features = ["v7"] }
sqlx = { version = "0.8.3", optional = true, features = ["postgres"] }
sea-orm = { version = "1.1.5", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"


[features]
default = []

